# anypython

./: README.md  pyproject.toml
src/: anytype.py  fetcher.py  list.py  logger.py  object.py  prop.py  settings.py  shared.py  type.py
src/utils/: api_tools.py  models.py  settings.py  type.py  unpacker.py
